--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,94 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  background-color: #242424;
+}
+
+h1{
+  font-size: 3rem;
+  color: rgb(179, 177, 177);
+}
+ul{
+  overflow-y: scroll;
+}
+
+li{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: space-between;
+  list-style-type: none;
+  background-color: rgb(113, 109, 109);
+  border: 1px solid #e3e2e2;
+  padding: 1%;
+  margin: 1% 0;
+  background-color: rgb(179, 177, 177);
+  border-radius: .7rem;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+button{
+  background-color:  rgb(179, 177, 177);
+  border: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.container{
+  padding: 3%;
+  height: 100vh;
 }
+
+.header{
+  height: 7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.input-container{
+  height: 6%;
+  margin: 4% 0 5% 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.list{
+    font-family: "Sour Gummy", sans-serif;
+    height: 69%;
+
+}
+
+.input{
+  font-family: "Edu AU VIC WA NT Pre", cursive;
+  background-color: rgb(179, 177, 177);
+  border: #403f3f;
+  padding: .3%;
+  border-radius: .7rem;
+}
+
+.input-button{
+  width: 10%;
+  font-size: 1rem;
+}
+.input-button:hover{
+  background-color: #403f3f;
+  cursor: pointer;
+}
+
+.input-tag{
+  width: 70%;
+}
+
+.action-container{
+  width: 6%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-right: 1%;
+}
+
+i{
+}
+
